# Boolean-Tensor-Factorizations

./: README.md  pyproject.toml
