[tool.poetry]
name = "boolean_tensor_factorizations"
version = "0.1.0"
description = ""
authors = ["Kota Nakamura <koutag0317@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.57.0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
